# pesto

./: .gitignore  Pesto.cabal  README.rst  template.html
.github/workflows/: build.yml
_build/: pesto.css
src/: Doc.lhs  Main.lhs  Test.lhs
src/Codec/: Pesto.lhs
src/Codec/Pesto/: Dot.lhs  Graph.lhs  Lint.lhs  Parse.lhs  Parse.lhs-boot  Serialize.lhs
src/exe/: Doc.lhs  Main.lhs  Test.lhs
src/lib/Codec/: Pesto.lhs
src/lib/Codec/Pesto/: Graph.lhs  Lint.lhs  Parse.lhs  Parse.lhs-boot  Serialize.lhs
