name:                Pesto
version:             0.1.0.0
-- synopsis:            
-- description:         
--license:             CC0
--license-file:        LICENSE
author:              Lars-Dominik Braun
maintainer:          lars@6xq.net
-- copyright:           
category:            Codec
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

-- parsec>=3.1.9 has instance Eq ParseError
library
  exposed-modules:     Codec.Pesto, Codec.Pesto.Parse, Codec.Pesto.Graph, Codec.Pesto.Lint, Codec.Pesto.Serialize
  build-depends:       base >=4.8, HUnit, parsec >= 3.1.9
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  ghc-options:         -Werror -Wall -fno-warn-missing-signatures

executable pesto
  main-is: Main.lhs
  hs-source-dirs:      src/exe
  default-language:    Haskell2010
  build-depends:       base >=4.8, HUnit, parsec >= 3.1.9, Pesto
  ghc-options:         -Werror -Wall -fno-warn-missing-signatures

test-suite pesto-test
  type: exitcode-stdio-1.0
  main-is: Test.lhs
  hs-source-dirs:      src/exe
  default-language:    Haskell2010
  build-depends:       base >=4.8, Pesto, HUnit, parsec >= 3.1.9, Pesto
  ghc-options:         -Werror -Wall -fno-warn-missing-signatures

executable pesto-doc
  main-is: Doc.lhs
  hs-source-dirs:      src/exe
  default-language:    Haskell2010
  build-depends:       base >=4.8, pandoc >=2.10, text, directory, Pesto, containers, doctemplates, either
  ghc-options:         -Werror -Wall -fno-warn-missing-signatures

